--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:oracle:thin:@developmentb.cbzwztcxfluc.eu-west-1.rds.
 spring.datasource.username=candidate
 spring.datasource.password=INTtestv1
 spring.datasource.driver-class-oracle.jdbc.driver.OracleDriver
+
+jwt.secret=usersecret
